manifests/p2f.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2f
  namespace: app-cjc
spec:
  clusterIP: None
  selector:
    app: p2f
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2f
  namespace: app-cjc
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: p2f.cjc.cityapp.vx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p2f
            port:
              number: 8080
  tls:
  - hosts:
    - p2f.cjc.cityapp.vx
    secretName: p2f-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2f
  namespace: app-cjc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2f
  template:
    metadata:
      labels:
        app: p2f
      annotations:
        # https://docs.cyberark.com/Product-Doc/OnlineHelp/AAM-DAP/Latest/en/Content/Integrations/k8s-ocp/cjr-k8s-secrets-provider-ref.htm
        conjur.org/container-mode: sidecar
        conjur.org/secrets-destination: file
        conjur.org/jwt-token-path: /var/run/secrets/tokens/jwt
        conjur.org/conjur-secrets.p2f: |
          - dbaddr: data/jtan/db_cityapp/address
          - dbuser: data/jtan/db_cityapp/username
          - dbpass: data/jtan/db_cityapp/password
        conjur.org/secret-file-path.p2f: ./worlddb.json
        conjur.org/secret-file-format.p2f: json
        conjur.org/secrets-refresh-interval: 10s
    spec:
      serviceAccountName: p2f
      containers:
      - name: cityapp
        image: docker.io/joetanx/cityapp:php
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: conjur-secrets
          mountPath: /conjur
          readOnly: true
      - name: secretsprovider
        image: docker.io/cyberark/secrets-provider-for-k8s:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: podinfo
          mountPath: /conjur/podinfo
        - name: conjur-secrets
          mountPath: /conjur/secrets
        - name: jwt-token
          mountPath: /var/run/secrets/tokens
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: annotations
            fieldRef:
              fieldPath: metadata.annotations
      - name: conjur-secrets
        emptyDir:
          medium: Memory
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              path: jwt
              expirationSeconds: 6000
              audience: https://apj-secrets.secretsmgr.cyberark.cloud/
