manifests/p2s-vol.yaml
apiVersion: v1
kind: Service
metadata:
  name: p2s-vol
  namespace: app-cjc
spec:
  clusterIP: None
  selector:
    app: p2s-vol
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p2s-vol
  namespace: app-cjc
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: p2s-vol.cjc.cityapp.vx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: p2s-vol
            port:
              number: 8080
  tls:
  - hosts:
    - p2s-vol.cjc.cityapp.vx
    secretName: p2s-vol-cert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p2s-vol
  namespace: app-cjc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: p2s-vol
  template:
    metadata:
      labels:
        app: p2s-vol
      annotations:
        # https://docs.cyberark.com/Product-Doc/OnlineHelp/AAM-DAP/Latest/en/Content/Integrations/k8s-ocp/cjr-k8s-secrets-provider-ref.htm
        conjur.org/container-mode: sidecar
        conjur.org/secrets-destination: k8s_secrets
        conjur.org/jwt-token-path: /var/run/secrets/tokens/jwt
        conjur.org/secrets-refresh-interval: 10s
    spec:
      serviceAccountName: p2s-vol
      containers:
      - name: cityapp
        image: docker.io/joetanx/cityapp:php
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: secrets
          mountPath: /secrets
      - name: secretsprovider
        image: docker.io/cyberark/secrets-provider-for-k8s:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: podinfo
          mountPath: /conjur/podinfo
        - name: jwt-token
          mountPath: /var/run/secrets/tokens
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: annotations
            fieldRef:
              fieldPath: metadata.annotations
      - name: secrets
        secret:
          secretName: p2s-vol-secret
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              path: jwt
              expirationSeconds: 6000
              audience: https://apj-secrets.secretsmgr.cyberark.cloud/
